Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46971

Image from imageCaptured signal is not correctly rotated

XMLWordPrintable

    • 038e22078b3ba665ae9519bf5c630b86064b301e

      In Qt 5.4.1 there was a change that was introduced that "fixed" the rotation issue.

      In Qt 5.4.2 it was backed out because it was a "feature", not a fix. I argued against this.

      I'm still observing the same broken behavior of 5.4.2 in 5.5.0.

      What used to work (5.4.1)
      with VideoOutput orientation:true,
      Camera captures a still. The preview is assined to an Image element.
      Under 5.4.1 what was seen in the VideoOutput was displayed in the Image element.
      Under 5.4.2, 5.5.0, what is displayed is rotated -90 deg.
      Setting the image to rotate by 90 does not work as now there is an aspect ratio and pixel mis-match. I asked professional support, they said there was no QML-fix for the issue. And I'd have to wait until 5.5.0

        1. QTBUG-46971.zip
          4 kB
          Qt Support
        2. QtRotation.pdf
          17 kB
          Jason Hihn
        3. VID_20150917_135750.mp4
          4.76 MB
          Jason Hihn
        For Gerrit Dashboard: QTBUG-46971
        # Subject Branch Project Status CR V

            ylopes Yoann Lopes
            scorp1us Jason Hihn
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes