src/plugins/avfoundation/camera/avfimagecapturecontrol.h
@@ -36,19 +36,24 @@
 
 #import <AVFoundation/AVFoundation.h>
 
+#include <QtCore/qqueue.h>
+#include <QtCore/qsemaphore.h>
 #include <QtMultimedia/qcameraimagecapturecontrol.h>
+#include <private/qvideooutputorientationhandler_p.h>
+#include "avfcamerasession.h"
 #include "avfstoragelocation.h"
 
 QT_BEGIN_NAMESPACE
-
-class AVFCameraSession;
-class AVFCameraService;
-class AVFCameraControl;
 
 class AVFImageCaptureControl : public QCameraImageCaptureControl
 {
 Q_OBJECT
 public:
+    struct CaptureRequest {
+        int captureId;
+        QSemaphore *previewReady;
+    };
+
     AVFImageCaptureControl(AVFCameraService *service, QObject *parent = 0);
     ~AVFImageCaptureControl();
 
@@ -64,8 +69,11 @@ public:
 private Q_SLOTS:
     void updateCaptureConnection();
     void updateReadyStatus();
+    void onNewViewfinderFrame(const QVideoFrame &frame);
 
 private:
+    void makeCapturePreview(CaptureRequest request, const QVideoFrame &frame, AVFCameraInfo cameraInfo, int screenOrientation);
+
     AVFCameraSession *m_session;
     AVFCameraControl *m_cameraControl;
     bool m_ready;
@@ -73,7 +81,13 @@ private:
     AVCaptureStillImageOutput *m_stillImageOutput;
     AVCaptureConnection *m_videoConnection;
     AVFStorageLocation m_storageLocation;
+    QVideoOutputOrientationHandler m_orientationHandler;
+
+    QMutex m_requestsMutex;
+    QQueue<CaptureRequest> m_captureRequests;
 };
+
+Q_DECLARE_TYPEINFO(AVFImageCaptureControl::CaptureRequest, Q_PRIMITIVE_TYPE);
 
 QT_END_NAMESPACE
 
